--- a/packages/q-sig-button/package.json
+++ b/packages/q-sig-button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "q-sig-button",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "q-sig-button",
   "author": "jherfst",
   "license": "MIT",
@@ -34,6 +34,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^4.3.1",
     "cross-env": "^5.1.4",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
@@ -53,7 +54,9 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-url": "^1.4.0",
+    "stream": "0.0.2",
+    "styled-components": "^4.2.0"
   },
   "files": [
     "dist"
