--- a/packages/q-sig-button/package.json
+++ b/packages/q-sig-button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "q-sig-button",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "q-sig-button",
   "author": "jherfst",
   "license": "MIT",
@@ -55,8 +55,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0",
-    "stream": "0.0.2",
-    "styled-components": "^4.2.0"
+    "stream": "0.0.2"
   },
   "files": [
     "dist"
