--- a/packages/q-sig-navbar/package.json
+++ b/packages/q-sig-navbar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "q-sig-navbar",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "author": "jherfst",
   "license": "MIT",
@@ -46,6 +46,7 @@
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^1.1.4",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
@@ -53,9 +54,13 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-url": "^1.4.0",
+    "styled-components": "^4.2.0"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "q-sig-button": "^1.0.3"
+  }
 }
