--- a/packages/q-sig-navbar/package.json
+++ b/packages/q-sig-navbar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "q-sig-navbar",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "author": "jherfst",
   "license": "MIT",
@@ -54,8 +54,7 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0",
-    "styled-components": "^4.2.0"
+    "rollup-plugin-url": "^1.4.0"
   },
   "files": [
     "dist"
